[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
log = "0.4.21"
env_logger = "0.11.3"
serde_json = "1.0"
async-trait = "0.1.80"
serde_derive = "1.0.180"
unidecode = "0.3.0"
redis = {version = "0.23.1", optional = true}
reqwest = { version = "0.11.18", features = ["json"], optional = true }

[features]
network = ["dep:redis", "dep:reqwest"]
