[package]
name = "frontend"
description = "The yew frontend for the tauri application"
authors = ["Minigrim0"]
version = "0.2.0"
license = "MIT"
repository = "https://github.com/Minigrim0/HomeDisplay"
edition = "2021"

[dependencies]
js-sys = "0.3.69"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.42"
web-sys = "0.3.69"
yew = { version = "0.21.0", features = ["csr"] }
common = { path = "../common",  features = [] }
serde-wasm-bindgen = "0.6.5"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.38"
serde_json = "1.0.116"
futures = "0.3.30"
gloo-console = "0.3.0"
