[package]
name = "homedisplay"
description = "HomeDisplay common crate. Contains all the source code required to perform api calls & database caching"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository = "https://github.com/Minigrim0/HomeDisplay"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
log = "0.4.21"
serde_json = "1.0"
async-trait = "0.1.80"
serde_derive = "1.0.180"
unidecode = "0.3.0"
redis = {version = "0.23.1", optional = true}
reqwest = { version = "0.11.18", features = ["json"], optional = true }
chrono = { version = "0.4.39", features = ["serde"] }
toml = "0.8.20"

[features]
network = ["dep:redis", "dep:reqwest"]
