[package]
name = "home-display-tauri"
version = "0.3.0"
description = "A tauri application for home-display"
authors = ["Minigrim0"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
colored = "2.0.0"
tauri = { version = "1.4", features = ["shell-open"] }
tokio = { version = "1.29.1", features = ["full"] }
log = "0.4.21"
env_logger = "0.11.3"
common = { path = "../common", features = ["network"] }

[features]
custom-protocol = ["tauri/custom-protocol"]  # DO NOT REMOVE!!
