[package]
name = "hd-tauri"
version = "0.3.0"
description = "A tauri application for home-display"
authors = ["Minigrim0"]
license = "MIT"
repository = "https://github.com/Minigrim0/HomeDisplay"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
colored = "2.0.0"
tauri = { version = "2", features = [] }
tokio = { version = "1.29.1", features = ["full"] }
log = "0.4.21"
env_logger = "0.11.3"
common = { path = "../common", features = ["network"] }

[features]
custom-protocol = ["tauri/custom-protocol"]  # DO NOT REMOVE!!
