[package]
name = "hd-tauri"
description = "A tauri application for home-display"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository = "https://github.com/Minigrim0/HomeDisplay"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
colored = "2.0.0"
tauri = { version = "2", features = [] }
tokio = { version = "1.29.1", features = ["full"] }
log = "0.4.21"
env_logger = "0.11.3"
clap = { version = "4.5.13", features = ["derive"] }
homedisplay = { path = "../homedisplay", features = ["network"] }

[features]
custom-protocol = ["tauri/custom-protocol"]  # DO NOT REMOVE!!
