[package]
name = "hd-tui"
version = "0.4.5"
description = "A tui application for home-display"
authors = ["Minigrim0"]
license = "MIT"
repository = "https://github.com/Minigrim0/HomeDisplay"
edition = "2021"

[dependencies]
color-eyre = { version = "0.6.3" }
crossterm = { version = "0.28.1" }
ratatui = { version = "0.29.0" }
common = { path = "../common" }
tokio = "1.39.2"
chrono = "0.4.38"
simplelog = "0.12.2"
clap = { version = "4.5.13", features = ["derive"] }
log = "0.4.22"
