[package]
name = "hd-tui"
description = "A tui application for home-display"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository = "https://github.com/Minigrim0/HomeDisplay"

[dependencies]
color-eyre = { version = "0.6.3" }
crossterm = { version = "0.28.1" }
ratatui = { version = "0.29.0" }
homedisplay = { path = "../homedisplay", features = ["network"] }
tokio = "1.39.2"
chrono = "0.4.38"
simplelog = "0.12.2"
clap = { version = "4.5.13", features = ["derive"] }
log = "0.4.22"
serde = { version = "1.0.217", features = ["derive"] }
